# trieoverflow-restack

./: .gitignore  README.md  pyproject.toml  schedule_workflow.py
.devcontainer/: devcontainer.json
src/: services.py
src/functions/: discordAgent.py  githubIssuesAgent.py  perplexityAgent.py  write_restack_function.py
src/functions/RAG/: ingestDocuments.py  llamaCloudRAG.py  mistral_snowflae.py  validateRAGResponse.py
src/functions/discord/: discord_processed_output.json  messageProcessor.py
src/functions/gen_code/: restack_code_generator.py
src/functions/perplexity/: perplexityAgent.py
src/temp_frontend/: app.py
src/utils/: google_drive.py
src/workflows/: query_question_workflow.py  submit_answer_workflow.py
