# Project metadata
[tool.poetry]
name = "Trieoverflow-restack"
version = "0.0.1"
description = "A quickstart for Restack"
authors = [
    "Restack Team <service@restack.io>",
]
readme = "README.md"
packages = [
    {include = "src", format = "sdist"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
watchfiles = "^1.0.0"
pydantic = "^2.10.4"

# Build system configuration
restack-ai = "^0.0.52"


llama-index = "^0.12.5"
llama-index-indices-managed-llama-cloud = "^0.6.3"
llama-index-llms-anthropic = "^0.6.3"
llama-index-llms-perplexity = "^0.3.2"
streamlit = "^1.31.0"
google-genai = "0.5.0"
google-api-python-client = "^2.159.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
requests = "^2.32.3"
tomli = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# CLI command configuration
[tool.poetry.scripts]
dev = "src.services:watch_services"
services = "src.services:run_services"
schedule = "schedule_workflow:run_schedule_workflow"
interval = "schedule_interval:run_schedule_interval"
calendar = "schedule_calendar:run_schedule_calendar"
